--- a/udemy/angular/angular-app/src/app/components/users/users.component.html
+++ b/udemy/angular/angular-app/src/app/components/users/users.component.html
@@ -1,4 +1,14 @@
 <h1>Users Component:</h1>
-<p>
-  users works!
-</p>
+<ul *ngIf="loaded && users?.length > 0">
+  <li *ngFor="let user of users">
+    <h3>{{ user.firstName }} {{ user.lastName }}</h3>
+    <ul *ngIf="showExtended">
+      <li>Age: {{ user.age }}</li>
+      <li>Address: {{ user.address.street }} {{ user.address.city }} {{ user.address.state }}</li>
+    </ul>
+  </li>
+</ul>
+
+<!-- <ng-template #noUsers><h4>No Users Found</h4></ng-template> -->
+<h4 *ngIf="users?.length == 0">No Users Found</h4>
+<h4 *ngIf="!loaded">Loading Users...</h4>
