progressing through angular explore

--- a/udemy/angular/angular-app/src/app/app.component.html
+++ b/udemy/angular/angular-app/src/app/app.component.html
@@ -1,3 +1,5 @@
-<h1>Angular App</h1>
-<app-user></app-user>
-<app-users></app-users>
+<app-navbar></app-navbar>
+<div class="container">
+  <app-user></app-user>
+  <app-users></app-users>
+</div>
