--- a/udemy/angular/angular-app/src/app/components/users/users.component.html
+++ b/udemy/angular/angular-app/src/app/components/users/users.component.html
@@ -1,11 +1,18 @@
 <h1>Users Component:</h1>
-<ul *ngIf="loaded && users?.length > 0">
-  <li *ngFor="let user of users">
-    <h3>{{ user.firstName }} {{ user.lastName }}</h3>
-    <ul *ngIf="showExtended">
-      <li>Age: {{ user.age }}</li>
-      <li>Address: {{ user.address.street }} {{ user.address.city }} {{ user.address.state }}</li>
-    </ul>
+<ul class="list-unstyled" *ngIf="loaded && users?.length > 0">
+  <li class="card card-body mb-2" *ngFor="let user of users">
+    <div class="row">
+      <div class="col-sm-4">
+        <img [src]="user.image" class="img-fluid" alt="">
+      </div>
+      <div class="col-sm-8">
+        <h3>{{ user.firstName }} {{ user.lastName }}</h3>
+        <ul class="list-group" *ngIf="showExtended">
+          <li class="list-group-item">Age: {{ user.age }}</li>
+          <li class="list-group-item">Address: {{ user.address.street }} {{ user.address.city }} {{ user.address.state }}</li>
+        </ul>
+      </div>
+    </div>
   </li>
 </ul>
 
