--- a/udemy/angular/angular-app/src/app/components/users/users.component.html
+++ b/udemy/angular/angular-app/src/app/components/users/users.component.html
@@ -11,20 +11,8 @@
       <input type="text" class="form-control" name="lastName">
     </div>
     <div class="form-group">
-      <label>Age</label>
-      <input type="number" class="form-control" name="age">
-    </div>
-    <div class="form-group">
-      <label>Street Address</label>
-      <input type="text" class="form-control" name="streetAddress">
-    </div>
-    <div class="form-group">
-      <label>City</label>
-      <input type="text" class="form-control" name="city">
-    </div>
-    <div class="form-group">
-      <label>State</label>
-      <input type="text" class="form-control" name="state">
+      <label>Email</label>
+      <input type="email" class="form-control" name="email">
     </div>
     <button (click)="addUser({firstName: 'Leslie', lastName: 'Knope', isActive: true})" [disabled]="!enableAdd" class="btn btn-block mb-3">Add New User</button>
   </form>
