--- a/udemy/angular/angular-app/src/app/components/users/users.component.html
+++ b/udemy/angular/angular-app/src/app/components/users/users.component.html
@@ -14,21 +14,20 @@
       <label>Email</label>
       <input type="email" class="form-control" name="email">
     </div>
-    <button (click)="addUser({firstName: 'Leslie', lastName: 'Knope', isActive: true})" [disabled]="!enableAdd" class="btn btn-block mb-3">Add New User</button>
+    <button [disabled]="" class="btn btn-block mb-3">Add New User</button>
   </form>
 </div>
 
 <ul class="list-unstyled" *ngIf="loaded && users?.length > 0">
   <li class="card card-body mb-2" *ngFor="let user of users" [class.bg-light]="user.isActive">
     <h3>{{ user.firstName }} {{ user.lastName }}
-      <small *ngIf="user.age && user.address">
+      <small>
         <button class="btn btn-dark btn-sm" [ngClass]="user.hide ? 'fa fa-plus' : 'fa fa-minus'" (click)="toggleHide(user)"></button>
       </small>
     </h3>
-    <ul class="list-group" *ngIf="!user.hide && user.age && user.address">
+    <ul class="list-group" *ngIf="!user.hide">
       <li class="list-group-item">Age: {{ user.age }}</li>
-      <li class="list-group-item">Address: {{ user.address.street }} {{ user.address.city }} {{ user.address.state }}</li>
-      <li class="list-group-item">Joined: {{ user.registered | date }}</li>
+      <li class="list-group-item">Joined: {{ user.registered | date}}</li>
     </ul>
   </li>
 </ul>
