--- a/udemy/angular/angular-app/src/app/components/users/users.component.html
+++ b/udemy/angular/angular-app/src/app/components/users/users.component.html
@@ -1,20 +1,23 @@
 <button (click)="showUserForm = !showUserForm" class="btn btn-dark mb-3">Add User</button>
 <div class="card card-body mb-3" *ngIf="showUserForm">
   <h2>Add User</h2>
-  <form (submit)="onSubmit($event)">
+  <form (ngSubmit)="onSubmit()">
     <div class="form-group">
       <label>First Name</label>
-      <input type="text" class="form-control" name="firstName">
+      <input type="text" [(ngModel)]="user.firstName" class="form-control" name="firstName">
     </div>
+    {{ user.firstName }}
     <div class="form-group">
       <label>Last Name</label>
-      <input type="text" class="form-control" name="lastName">
+      <input type="text" [(ngModel)]="user.lastName" class="form-control" name="lastName">
     </div>
+    {{ user.lastName }}
     <div class="form-group">
       <label>Email</label>
-      <input type="email" class="form-control" name="email">
+      <input type="email" [(ngModel)]="user.email" class="form-control" name="email">
     </div>
-    <button [disabled]="" class="btn btn-block mb-3">Add New User</button>
+    {{ user.email }}
+    <button [disabled]="user.firstName == '' || user.lastName == ''" class="btn btn-block mb-3">Add New User</button>
   </form>
 </div>
 
